--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,9 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_db
+    url: jdbc:mysql://8.141.3.104:3306/my_db
     username: root
-    password: 1234
+    password: 123456
   # Redis 配置
   # todo 需替换配置，然后取消注释
 #  redis:
